@@ -2,13 +2,15 @@
 Hash: SHA256
 
 DIST sanitize-1.2.1.gem 12800 RMD160 ab51193bec20270432ace1660e0d50718a288007 SHA1 28c989758cbcbfe6c68de3543ea74d1592d88d01 SHA256 8580cfaa5de4b00950040344dbf6cc0a00beeed6ec8c3c205e8843d22b1468d0
+DIST sanitize-2.0.0.gem 14336 RMD160 bfe7d8d8617bee95b8c4349b0c7a00f41a8d0875 SHA1 3e8c6e712d09a94d402c3adbfda93702cc5ca60c SHA256 b3df930c6a94848892bb4c76fe7966365077813392e00bca7782c9f9646a59f4
 EBUILD sanitize-1.2.1.ebuild 609 RMD160 036f547dcdde3249f0018a52459598d18dd59ae9 SHA1 60139b97325145ab1e87ece90f437a782b92f380 SHA256 5b164936a53cffd9022f3254adcf862bb13aeccfc3ad41f6970a75e562556f28
-MISC ChangeLog 474 RMD160 4b357a60bb588cd3bca54087706e6ce0f9419c26 SHA1 d5a7270bd2769f51f1a34aa8bc439e073939580f SHA256 ac8c7f569b35d9730544fa6ca575e44a68d284640684fa87259e2b3d5e548b6c
+EBUILD sanitize-2.0.0.ebuild 612 RMD160 7c71e70932d4216d0e287c8da2c8c06a9d13144d SHA1 b84dbc69fee7f83417a52f1de7c0fe3f0b3f4f19 SHA256 582858f7a64fca78a129e5221c60bb12074abad062d81e17021e1d8bea3df072
+MISC ChangeLog 596 RMD160 416025b5e25a648a916b62e6f819800837058f32 SHA1 415f1c032f113ad20a096b54bb5b0c62a91f3669 SHA256 40133aee0872c64954e27e7ec5c6864e44bba4ee261af1e5507fed3019a521e1
 MISC metadata.xml 215 RMD160 682b22c57f2f17c789b244e2bb32fe15ca3fa332 SHA1 ccf017e39c3f44ac4b557da94f91096555cb1be2 SHA256 c058515dd6264789274b580e999ce4fbbb5c53c36a452bf7b32fd227980abcf8
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.16 (GNU/Linux)
 
-iF4EAREIAAYFAk0m9VUACgkQrnu0mw69JkpxgQD/V7vsXLzptloAXioM9UxTnLou
-XGY7LeGNf+DKmcKb2SsA/214rZGKKD+YzQNJIMghbdhF2mILcPqujafVPR7rz8PO
-=hA9n
+iF4EAREIAAYFAk05ZtcACgkQrnu0mw69JkrOWwD/Qz4A5mu+AQ57FBGpOv99Zek2
+UQFSYbKcieBP8B7Po5QA/3sZ7OI1g95Wa48QrP5CfgpnTVIAGUBUuYS+RsSdnATv
+=95Hh
 -----END PGP SIGNATURE-----
