@@ -2,6 +2,11 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*sanitize-2.0.0 (21 Jan 2011)
+
+  21 Jan 2011; Hans de Graaff <graaff@gentoo.org> +sanitize-2.0.0.ebuild:
+  Version bump.
+
   07 Jan 2011; Hans de Graaff <graaff@gentoo.org> sanitize-1.2.1.ebuild:
   Keyword ~x86-macos.
 
